update tomcat and jdbc driver, increase permgen space